--- a/Gödelian-Explorations.tex
+++ b/Gödelian-Explorations.tex
@@ -829,7 +829,7 @@ form of the acceptable form of double negation in intuitionistic logic:
 
 \vspace{-20cm}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, bottomrule=.15mm, rightrule=.15mm, breakable, colback=white, opacitybacktitle=0.6, arc=.35mm, toprule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{A Classical Theorem, but in Intuitionism}, toptitle=1mm, colframe=quarto-callout-tip-color-frame, bottomtitle=1mm, titlerule=0mm, leftrule=.75mm, opacityback=0, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, toprule=.15mm, left=2mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{A Classical Theorem, but in Intuitionism}, opacitybacktitle=0.6, breakable, colbacktitle=quarto-callout-tip-color!10!white, bottomrule=.15mm, coltitle=black, arc=.35mm, titlerule=0mm, bottomtitle=1mm, rightrule=.15mm, toptitle=1mm, opacityback=0, colback=white, colframe=quarto-callout-tip-color-frame]
 
 \textbf{Theorem.} There exist two irrational numbers \(x\) and \(y\)
 such that \(x^y\) is irrational.
@@ -1082,7 +1082,7 @@ represent a possible world by a subset of sentence letters. A
   size issues‽} of possible worlds, \(R\subseteq W\times W\) is a
 relation known as the \emph{accessibility relation} or the
 \emph{relative possibility relation}, and \(\alpha\) is a distinguished
-element of \emph{W} known as the \emph{actual world}
+element of \emph{W} known as the \emph{actual world}.
 
 We can exhaustively characterize the notion of \[\beta \vDash \varphi,\]
 the \emph{truth of a sentence in a possible world} \(\beta\), by
